packages/build/tests/error/build/fixtures/fail_build_compat/plugin.js
module.exports = {
  async onPreBuild({
    utils: {
      build: { fail },
    },
  }) {
    fail('test')
  },
}
